{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 30,
  "lineage": "50e2f82c-72a8-1bc2-8569-b12b83054daa",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_list",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "4f836306-1f40-400e-8f42-0343f075a07a",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/virtualNetworks/intro-vnet",
            "location": "eastus",
            "name": "intro-vnet",
            "resource_group_name": "intro_group",
            "subnets": [
              "default",
              "vmbytf01_subnet"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01_n_private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface",
            "internal_domain_name_suffix": "azrygt0ad2hebd0canb5a3napc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/virtualNetworks/intro-vnet/subnets/vmbytf01_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-35-88-E6",
            "name": "vmbytf01_private_networkinterface",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "intro_group",
            "virtual_machine_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Compute/virtualMachines/vmbytf01"
          },
          "dependencies": [
            "azurerm_subnet.vm01_subnet",
            "data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01_n_public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkInterfaces/vmbytf01_public_networkinterface",
            "internal_domain_name_suffix": "azrygt0ad2hebd0canb5a3napc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/publicIPAddresses/vmbytf01_pubip",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/virtualNetworks/intro-vnet/subnets/vmbytf01_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "vmbytf01_public_networkinterface",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "intro_group"
          },
          "dependencies": [
            "azurerm_public_ip.vm01_pubip",
            "azurerm_subnet.vm01_subnet",
            "data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_asste",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface|/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg",
            "network_interface_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface",
            "network_security_group_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm01_n_private",
            "azurerm_network_interface.vm01_n_public",
            "azurerm_network_security_group.nsg_def",
            "azurerm_public_ip.vm01_pubip",
            "azurerm_subnet.vm01_subnet",
            "data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_def",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg",
            "location": "eastus",
            "name": "vmbytf01_nsg",
            "resource_group_name": "intro_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "vmbytf01_nsg",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "intro_group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "22",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_def"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm01_pubip",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/publicIPAddresses/vmbytf01_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmbytf01_pubip",
            "resource_group_name": "intro_group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm01_subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/25"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/intro_group/providers/Microsoft.Network/virtualNetworks/intro-vnet/subnets/vmbytf01_subnet",
            "name": "vmbytf01_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "intro_group",
            "virtual_network_name": "intro-vnet"
          },
          "dependencies": [
            "data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    }
  ]
}